add nhap hang func

--- a/DoAnCK/DoAnCK.csproj
+++ b/DoAnCK/DoAnCK.csproj
@@ -55,11 +55,17 @@
   <ItemGroup>
     <Compile Include="CuaHang.cs" />
     <Compile Include="DienTu.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Form.Designer.cs">
+      <DependentUpon>Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormNhapXuat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNhapXuat.Designer.cs">
+      <DependentUpon>FormNhapXuat.cs</DependentUpon>
     </Compile>
     <Compile Include="FormTrangChu.cs">
       <SubType>Form</SubType>
@@ -69,11 +75,23 @@
     </Compile>
     <Compile Include="GiaDung.cs" />
     <Compile Include="HangHoa.cs" />
-    <Compile Include="HangHoaComponent.cs">
+    <Compile Include="HangHoaLoComponent.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="HangHoaComponent.Designer.cs">
-      <DependentUpon>HangHoaComponent.cs</DependentUpon>
+    <Compile Include="HangHoaLoComponent.Designer.cs">
+      <DependentUpon>HangHoaLoComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HangHoaNhapXuatComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HangHoaNhapXuatComponent.Designer.cs">
+      <DependentUpon>HangHoaNhapXuatComponent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HangHoaTrangChuComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HangHoaTrangChuComponent.Designer.cs">
+      <DependentUpon>HangHoaTrangChuComponent.cs</DependentUpon>
     </Compile>
     <Compile Include="HoaDon.cs" />
     <Compile Include="HoaDonNhap.cs" />
@@ -85,14 +103,23 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLyNhapXuat.cs" />
     <Compile Include="ThucPham.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Form.resx">
+      <DependentUpon>Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNhapXuat.resx">
+      <DependentUpon>FormNhapXuat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTrangChu.resx">
       <DependentUpon>FormTrangChu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HangHoaComponent.resx">
-      <DependentUpon>HangHoaComponent.cs</DependentUpon>
+    <EmbeddedResource Include="HangHoaLoComponent.resx">
+      <DependentUpon>HangHoaLoComponent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HangHoaNhapXuatComponent.resx">
+      <DependentUpon>HangHoaNhapXuatComponent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HangHoaTrangChuComponent.resx">
+      <DependentUpon>HangHoaTrangChuComponent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
