--- a/DoAnCK/DoAnCK.csproj
+++ b/DoAnCK/DoAnCK.csproj
@@ -53,6 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BillTailComponent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BillTailComponent.Designer.cs">
+      <DependentUpon>BillTailComponent.cs</DependentUpon>
+    </Compile>
     <Compile Include="CuaHang.cs" />
     <Compile Include="DienTu.cs" />
     <Compile Include="Form.cs">
@@ -145,6 +151,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLyNhapXuat.cs" />
     <Compile Include="ThucPham.cs" />
+    <EmbeddedResource Include="BillTailComponent.resx">
+      <DependentUpon>BillTailComponent.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form.resx">
       <DependentUpon>Form.cs</DependentUpon>
     </EmbeddedResource>
